js/js.translator/testData/incremental/invalidation/functionTypeInterface/lib2/l2a.0.kt
fun getString(): String {
    konst s: suspend () -> Unit = {}
    return getTypeName(s)
}
